[Mac][Material] Fixed the lock icon color

BUG=618776

Review-Url: https://codereview.chromium.org/2067443003
Cr-Commit-Position: refs/heads/master@{#399535}

Former-commit-id: b336681c2525e4c0ea799719bd8d8271e0f2f337